--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://brunobendel.github.io/react_movie",
+  "homepage": "https://react-movie-three-nu.vercel.app/",
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.8"
   },
