enviar para deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://react-movie-three-nu.vercel.app/",
+  "homepage": "https://brunobendel.github.io/react_movie",
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
